[package]
name = "cef"
version = "124.3.8"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Wu Yu Wei <yuweiwu@pm.me>"]
description = "Use cef in Rust"
repository = "https://github.com/wusyong/cef-rs"
readme = "README.md"

[features]
dox = ["cef-sys/dox"]

[package.metadata.docs.rs]
features = ["dox"]

[workspace]
members = ["sys"]

[dependencies]
cef-sys = { package = "libcef-sys", version = "124.3.8", path = "sys" }
widestring = "1.0"

[dev-dependencies]
winit = "0.28"
