[package]
name = "libcef-sys"
version = "124.3.8"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Wu Yu Wei <yuweiwu@pm.me>"]
description = "cef-rs sys crate"
repository = "https://github.com/wusyong/cef-rs"

[lib]
name = "cef_sys"

[features]
dox = []

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]

[build-dependencies]
bindgen = "0.65.1"

[dev-dependencies]
winit = "0.30"
